--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoCafeteria
 excludes=
 file.reference.hamcrest-core-1.3.RC2.jar=jarFiles\\hamcrest-core-1.3.RC2.jar
+file.reference.javafx-swt.jar=C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar
+file.reference.javafx.base.jar=C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib\\javafx.base.jar
+file.reference.javafx.controls.jar=C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib\\javafx.controls.jar
+file.reference.javafx.fxml.jar=C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib\\javafx.fxml.jar
+file.reference.javafx.graphics.jar=C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib\\javafx.graphics.jar
+file.reference.javafx.media.jar=C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib\\javafx.media.jar
+file.reference.javafx.swing.jar=C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib\\javafx.swing.jar
+file.reference.javafx.web.jar=C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib\\javafx.web.jar
 file.reference.jfoenix-8.0.10.jar=jarFiles\\jfoenix-8.0.10.jar
 file.reference.jfoenix-9.0.10.jar=jarFiles\\jfoenix-9.0.10.jar
 file.reference.junit-4.11.jar=jarFiles\\junit-4.11.jar
@@ -45,7 +53,15 @@ javac.classpath=\
     ${file.reference.jfoenix-8.0.10.jar}:\
     ${file.reference.jfoenix-9.0.10.jar}:\
     ${file.reference.junit-4.11.jar}:\
-    ${file.reference.mysql-connector-java-8.0.21.jar}
+    ${file.reference.mysql-connector-java-8.0.21.jar}:\
+    ${file.reference.javafx.base.jar}:\
+    ${file.reference.javafx.controls.jar}:\
+    ${file.reference.javafx.fxml.jar}:\
+    ${file.reference.javafx.graphics.jar}:\
+    ${file.reference.javafx.media.jar}:\
+    ${file.reference.javafx.swing.jar}:\
+    ${file.reference.javafx.web.jar}:\
+    ${file.reference.javafx-swt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
