--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoCafeteria
+application.vendor=enrique
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/ProyectoCafeteria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoCafeteria
+endorsed.classpath=
 excludes=
 file.reference.hamcrest-core-1.3.RC2.jar=jarFiles\\hamcrest-core-1.3.RC2.jar
 file.reference.javafx-swt.jar=C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar
@@ -47,7 +49,9 @@ file.reference.jfoenix-9.0.10.jar=jarFiles\\jfoenix-9.0.10.jar
 file.reference.junit-4.11.jar=jarFiles\\junit-4.11.jar
 file.reference.mysql-connector-java-8.0.21.jar=jarFiles\\mysql-connector-java-8.0.21.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.hamcrest-core-1.3.RC2.jar}:\
     ${file.reference.jfoenix-8.0.10.jar}:\
@@ -97,7 +101,24 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoCafeteria
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=proyectocafeteria.ProyectoCafeteria
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -105,10 +126,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=--module-path "C:\\Users\\enriq\\Downloads\\javafx-sdk-11.0.2\\lib" --add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
