CU 23 - Reservación de producto
CU 23 - Reservación de producto - 100%

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,15 +55,15 @@ javac.classpath=\
     ${file.reference.hamcrest-core-1.3.RC2.jar}:\
     ${file.reference.junit-4.11.jar}:\
     ${file.reference.mysql-connector-java-8.0.21.jar}:\
+    ${file.reference.jfoenix-9.0.10.jar}:\
+    ${file.reference.javafx.fxml.jar}:\
     ${file.reference.javafx.base.jar}:\
     ${file.reference.javafx.controls.jar}:\
-    ${file.reference.javafx.fxml.jar}:\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
     ${file.reference.javafx.web.jar}:\
-    ${file.reference.javafx-swt.jar}:\
-    ${file.reference.jfoenix-9.0.10.jar}
+    ${file.reference.javafx-swt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
