--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=ProyectoCafeteria
 application.vendor=enrique
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -37,6 +38,7 @@ endorsed.classpath=
 excludes=
 file.reference.hamcrest-core-1.3.RC2.jar=jarFiles\\hamcrest-core-1.3.RC2.jar
 file.reference.jfoenix-8.0.10.jar=..\\..\\..\\Downloads\\jfoenix-8.0.10.jar
+file.reference.jfoenix-9.0.10.jar=C:\\Users\\jeffr\\OneDrive\\Documentos\\NetBeansProjects\\TiendaElectronica\\Resources\\jfoenix-9.0.10.jar
 file.reference.junit-4.11.jar=jarFiles\\junit-4.11.jar
 file.reference.mysql-connector-java-8.0.21.jar=jarFiles\\mysql-connector-java-8.0.21.jar
 includes=**
@@ -47,7 +49,8 @@ javac.classpath=\
     ${file.reference.hamcrest-core-1.3.RC2.jar}:\
     ${file.reference.junit-4.11.jar}:\
     ${file.reference.mysql-connector-java-8.0.21.jar}:\
-    ${file.reference.jfoenix-8.0.10.jar}
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.jfoenix-9.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -104,12 +107,13 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 run.modulepath=\
-    ${javac.modulepath}
+    ${javac.modulepath}:\
+    ${libs.JavaFX.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
