--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,8 +37,7 @@ dist.jlink.output=${dist.jlink.dir}/ProyectoCafeteria
 endorsed.classpath=
 excludes=
 file.reference.hamcrest-core-1.3.RC2.jar=jarFiles\\hamcrest-core-1.3.RC2.jar
-file.reference.jfoenix-9.0.10.jar=C:\\Users\\abiga\\Documents\\NetBeansProjects\\Cafeterias\\ProyectoCafeteria-mio\\jarFiles\\jfoenix-9.0.10.jar
-file.reference.jfoenix-9.0.10.jar-1=C:\\Users\\abiga\\Documents\\NetBeansProjects\\Cafeterias\\ProyectoCafeteria\\dist\\lib\\jfoenix-9.0.10.jar
+file.reference.jfoenix-8.0.10.jar=..\\..\\..\\Downloads\\jfoenix-8.0.10.jar
 file.reference.junit-4.11.jar=jarFiles\\junit-4.11.jar
 file.reference.mysql-connector-java-8.0.21.jar=jarFiles\\mysql-connector-java-8.0.21.jar
 includes=**
@@ -49,9 +48,7 @@ javac.classpath=\
     ${file.reference.hamcrest-core-1.3.RC2.jar}:\
     ${file.reference.junit-4.11.jar}:\
     ${file.reference.mysql-connector-java-8.0.21.jar}:\
-    ${libs.JavaFX15.classpath}:\
-    ${file.reference.jfoenix-9.0.10.jar-1}:\
-    ${file.reference.jfoenix-9.0.10.jar}
+    ${file.reference.jfoenix-8.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,8 +57,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=15
-javac.target=15
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -113,7 +110,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=--module-path "C:\\Users\\abiga\\Downloads\\javafx-sdk-15\\lib" --add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
